--- a/app/src/main/res/layout/activity_ventana_registro.xml
+++ b/app/src/main/res/layout/activity_ventana_registro.xml
@@ -17,7 +17,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_gravity="center">
 
         <ImageView
@@ -26,7 +26,8 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            />
 
         <TextView
             android:layout_marginTop="20dp"
@@ -34,7 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30sp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:textColor="#000000"/>
 
     </LinearLayout>
 
@@ -48,7 +50,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:id="@+id/botonGoogle"/>
+            android:id="@+id/botonGoogle"
+            android:background="@color/selectedNavigationBottom"
+
+            android:textColor="#FFFFFF"/>
 
         <Button
             android:id="@+id/buttonSignOut"
@@ -58,6 +63,8 @@
             android:text="@string/signout"
             android:padding="25dp"
             android:visibility="invisible"
+            android:background="@color/selectedNavigationBottom"
+            android:textColor="#FFFFFF"
             android:textSize="18sp"/>
 
     </FrameLayout>
