--- a/app/src/main/res/layout/activity_ventana_registro.xml
+++ b/app/src/main/res/layout/activity_ventana_registro.xml
@@ -15,7 +15,6 @@
         android:padding="50dp"
         android:scaleType="centerCrop"/>
 
-<<<<<<< Updated upstream
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,8 +27,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            />
+            android:scaleType="centerCrop"/>
 
         <TextView
             android:layout_marginTop="20dp"
@@ -37,55 +35,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30sp"
-            android:layout_gravity="center"
-            android:textColor="#000000"/>
-=======
-    <ImageView
-        android:layout_marginTop="50dp"
-        android:id="@+id/imageViewFoto"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop"/>
->>>>>>> Stashed changes
+            android:layout_gravity="center"/>
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/textViewNombre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:layout_gravity="center"/>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_gravity="center">
-
-        <com.google.android.gms.common.SignInButton
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:id="@+id/botonGoogle"
-            android:background="@color/selectedNavigationBottom"
+            android:layout_marginTop="25dp"
+            android:layout_gravity="center">
 
-            android:textColor="#FFFFFF"/>
+            <com.google.android.gms.common.SignInButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:id="@+id/botonGoogle"
+                android:background="@color/selectedNavigationBottom"
 
-        <Button
-            android:id="@+id/buttonSignOut"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@color/selectedNavigationBottom"
-            android:textColor="@android:color/white"
-            android:text="@string/signout"
-            android:padding="25dp"
-            android:visibility="invisible"
-            android:background="@color/selectedNavigationBottom"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"/>
+                android:textColor="#FFFFFF"/>
 
-    </FrameLayout>
+            <Button
+                android:id="@+id/buttonSignOut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/selectedNavigationBottom"
+                android:textColor="@android:color/white"
+                android:text="@string/signout"
+                android:padding="25dp"
+                android:visibility="invisible"
+                android:textSize="18sp"/>
 
+        </FrameLayout>
+    </LinearLayout>
 </LinearLayout>
